--- a/views/room.ejs
+++ b/views/room.ejs
@@ -50,7 +50,7 @@
             </div>
             <div class="main__controls__block">
                <div class="main__controls__button screen-share">
-                  <i class="fas fa-shield-alt"></i>
+                  <i class="fas fa-share"></i>
                   <span >Screen Share</span>
                </div>
                <div class="main__controls__button">
@@ -58,7 +58,7 @@
                   <span>Participants</span>
                </div>
                <div class="main__controls__button">
-                  <i class="fas fa-comment-alt"></i>
+                  <i class="fas fa-upload"></i>
                   <label for="file-input">
                      <span class="fileShare">File Share</span>
                   </label>
